<?xml version="1.0" encoding="utf-8"?>
    <!--suppress ALL -->
<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       android:layout_width="match_parent"
       android:layout_height="match_parent"
       tools:context="com.udacity.myapplication.MainActivity">

    <ImageView
        android:id="@+id/imagination"
        android:layout_width="match_parent"
        android:layout_height="365dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/textView5"
        android:layout_marginTop="202dp"
        android:scaleType="centerCrop"
        android:src="@drawable/imagination" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.udacity.myapplication.MainActivity">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/company_name"
            android:textAppearance="?android:textAppearanceLarge"
            android:textColor="@android:color/holo_green_light"
            android:textSize="35sp"
            android:textStyle="bold" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="@string/address"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/textView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/location"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignEnd="@+id/textView2"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignTop="@+id/textView3"
        android:layout_marginTop="32dp"
        android:autoLink="phone"
        android:linksClickable="true"
        android:text="@string/phone_number"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignTop="@+id/textView4"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:autoLink="web"
        android:linksClickable="true"
        android:text="@string/website"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@android:color/holo_blue_dark"
        android:textStyle="italic" />
    </RelativeLayout>
    </ScrollView>
    </RelativeLayout>